--- a/rnn_k.ipynb
+++ b/rnn_k.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "# Recurrent Neural Network\n",
     "\n",
+    "# PREDICTING PRICES\n",
     "# Part 1 - Data Preprocessing\n",
     "\n",
     "# Importing the libraries\n",
